proj1/tests/other-tests/MINZ_tests/error/fn_defaultargs.py
def with_defaultargs(x=3):
    print(x)